<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/nav_job" >
        <menu>
            <item
                android:id="@+id/nav_filter"
                android:icon="@drawable/ic_menu_filter"
                android:title="@string/nav_filter" />
            <item
                android:id="@+id/nav_saved_job"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/nav_saved_jobs" />
        </menu>
    </item>

    <item android:title="@string/nav_communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_share" />
        </menu>
    </item>

    <item android:title="@string/nav_account">
        <menu>
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/nav_setting" />
            <item
                android:id="@+id/nav_sign_out"
                android:icon="@drawable/ic_menu_signout"
                android:title="@string/nav_sign_out" />
        </menu>
    </item>

</menu>
